--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zobra",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://ochoasanchez.github.io/zobra_v2/",
